take action spacing fixed - 3

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -789,7 +789,9 @@ html.js fieldset.collapsed{
   }
 }
 article.node-223806, article.node-223591{
+ .field-name-body{
   padding:40px 80px; 
+  }
 }
 .easy-breadcrumb{
  position: absolute;
